下班倒计时

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
       <input type="submit" value="开始倒计时" />
     </form>
     <div id="countdown"></div>
-    <div class="footer">Copyright © 2023 川少</div>
+    <a href="https://github.com/52js">
+      <div class="footer">Copyright © 2023 52js, 川少. All rights reserved. </div>
+    </a>
     <script>
       // 获取存储的下班时间
       var endTime = localStorage.getItem('endTime')
